src/objects/DataInformationReference__c.object
<CustomObject>
    <description>Acts as a relational object to Data Object from Data Information.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on usage or conversion to/from data source.</description>
        <inlineHelpText>Comments on usage or conversion to/from data source.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DataInformation__c</fullName>
        <label>Data Information</label>
        <referenceTo>DataInformation__c</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Object</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Information References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the data for this information a source.</description>
        <inlineHelpText>Is the data for this information a source.</inlineHelpText>
        <label>Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this reference a target for the data.</description>
        <inlineHelpText>Is this reference a target for the data.</inlineHelpText>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Information Reference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Information References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>